--- a/server/src/main/resources/com/arcbees/beeshop/server/servlets/index.vm
+++ b/server/src/main/resources/com/arcbees/beeshop/server/servlets/index.vm
@@ -1,11 +1,25 @@
+##* @vtlvariable name="seo" type="java.util.ResourceBundle" *#
+#set($title = ${seo.getString("title")})
+#set($description = ${seo.getString("description")})
+#set($keywords = ${seo.getString("keywords")})
 <!doctype html>
+<html lang="$locale">
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="gwt:property" content="locale=$locale">
 
-    <title>Bee Shop</title>
+    <title>Beestore</title>
 
-    <script type="text/javascript" src="beeshop/beeshop.nocache.js"></script>
+    <meta property="description" content="$description">
+    <meta property="og:description" content="$description">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image" content="http://www.arcbees.com/img/facebook.png">
+    <meta property="og:type" content="website">
+    <meta property="keywords" content="$keywords">
+
+    <script type="text/javascript" src="/beeshop/beeshop.nocache.js"></script>
 
     <style type="text/css">
         #__gwt_historyFrame {
@@ -27,6 +41,7 @@
             font-family: sans-serif;
         }
     </style>
+
 </head>
 <body>
 <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'></iframe>
