Add back doctype

--- a/server/src/main/resources/com/arcbees/beeshop/server/servlets/index.vm
+++ b/server/src/main/resources/com/arcbees/beeshop/server/servlets/index.vm
@@ -2,6 +2,7 @@
 #set($title = ${seo.getString("title")})
 #set($description = ${seo.getString("description")})
 #set($keywords = ${seo.getString("keywords")})
+<!doctype html>
 <html lang="$locale">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
