--- a/server/src/main/resources/com/arcbees/beeshop/server/servlets/index.vm
+++ b/server/src/main/resources/com/arcbees/beeshop/server/servlets/index.vm
@@ -6,6 +6,7 @@
 <html lang="$locale">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="gwt:property" content="locale=$locale">
 
     <title>Beestore</title>
