--- a/server/src/main/resources/com/arcbees/beestore/server/servlets/index.vm
+++ b/server/src/main/resources/com/arcbees/beestore/server/servlets/index.vm
@@ -2,6 +2,7 @@
 #set($title = ${seo.getString("title")})
 #set($description = ${seo.getString("description")})
 #set($keywords = ${seo.getString("keywords")})
+#set($image = ${seo.getString("image")})
 <!doctype html>
 <html lang="$locale">
 <head>
@@ -9,15 +10,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="gwt:property" content="locale=$locale">
 
-    <title>Beestore</title>
+    <title>$title</title>
 
     <meta property="description" content="$description">
+    <meta property="og:title" content="$title">
     <meta property="og:description" content="$description">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:image" content="http://www.arcbees.com/img/facebook.png">
+    <meta property="og:image" content="$image">
     <meta property="og:type" content="website">
     <meta property="keywords" content="$keywords">
+
+    <meta property="twitter:card" content="summary"/>
+    <meta property="twitter:site" content="@Arcbees"/>
+    <meta property="twitter:title" content="$title"/>
+    <meta property="twitter:description" content="$description"/>
+    <meta property="twitter:image" content="$image"/>
 
     <script type="text/javascript" src="/beestore/beestore.nocache.js"></script>
 
